Added mongoDb database and mongoDb adapter to nextauth

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-GOOGLE_CLIENT_ID="499790718060-8ge38b7oduanhpmjt95a83bkqjb4melp.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_ID="1060547036349-43o9b1o0c1uusim102bkkt596i3pbc8a.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
 
 
-NEXTAUTH_SECRET=say_lalisa_love_me_lalisa_love_me_hey
-
-
+NEXTAUTH_SECRET="say_lalisa_love_me_lalisa_love_me_hey"
 NEXTAUTH_URL=http://localhost:3000
+
+MONGODB_URI="mongodb+srv://neilrowland56:Loddington123@cluster0.y412itj.mongodb.net/?retryWrites=true&w=majority"
