--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
@@ -20,6 +21,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2"
   }
 }
